--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/public/Galleta.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords" content="Galletas de la fortuna, seurte,frases">
+  <meta name="author" content="Jesus Andrade">
   <title>Galletas de la suerte</title>
 </head>
 
